fixing issues with stream branch